<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@color/MediumPurple"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/main_ui_top_bar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:paddingLeft="15dp"
                android:text="Welcome to F5"
                android:textSize="18dp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/chat_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableTop="@drawable/ic_chatlist"
                    android:text="ChatList" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/profile_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableTop="@drawable/ic_baseline_account_circle_24"
                    android:text="Profile" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/post_wallet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableTop="@drawable/ic_baseline_account_balance_wallet_24"
                    android:text="Wallet" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/search_bar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@color/LightGray"
                android:drawableLeft="@drawable/ic_search"
                android:gravity="center"
                android:hint="Type keywords to search"
                android:padding="12dp" />

            <LinearLayout
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:background="@color/MediumPurple"
                android:gravity="center"
                android:orientation="vertical">
                <!--            <ImageView-->
                <!--                android:layout_width="wrap_content"-->
                <!--                android:layout_height="wrap_content"-->
                <!--                android:src="@drawable/ic_search" />-->
                <TextView
                    android:id="@+id/search_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="search"
                    android:textColor="@color/white" />
            </LinearLayout>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:text="Categories"
                android:textColor="@color/black"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/main_ui_more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:padding="15dp"
                android:text=">>More>>"
                android:textColor="@color/black" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/Gray"
            android:orientation="horizontal"
            android:padding="10dp">

            <LinearLayout
                android:id="@+id/clothes_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/ic_clothes" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Clothing"
                    android:textColor="@color/black"
                    android:textSize="14dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/book_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/ic_book" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Books"
                    android:textColor="@color/black"
                    android:textSize="14dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/electronis_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/ic_electronics" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Electronics"
                    android:textColor="@color/black"
                    android:textSize="14dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/furniture_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/ic_furniture" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Furniture"
                    android:textColor="@color/black"
                    android:textSize="14dp" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="Explore more items"
            android:textColor="@color/black"
            android:textSize="15dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recommend_itemList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="62dp"
            tools:listitem="@layout/single_item_recommend_layout" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#f2f2f2"
        android:padding="10dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/logout_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="logout"
                android:drawableTop="@drawable/ic_baseline_exit_to_app_24"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/post_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Post"
                android:drawableTop="@drawable/ic_baseline_post_add_24"/>
        </LinearLayout>


    </LinearLayout>
</RelativeLayout>
