...
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/ic_baseline_account_balance_wallet_24"
                android:text="Wallet" />
        </LinearLayout>
    </LinearLayout>
    <ListView
        android:id="@+id/category_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </ListView>


</LinearLayout>
...
