...
                    android:textColor="#2B712E"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@+id/item_name_caption"/>

                <TextView
                    android:id="@+id/item_category_caption"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="40dp"
                    android:text=""
                    android:textColor="#000000"
...
